// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBlockedCompletedStep matches snapshot 1`] = `
<ConnectFunction
  buttonColor="primary"
  stepClass="appCompletedMsg"
  stepProps={
    Object {
      "classes": Object {
        "root": "css-f2qeki",
      },
      "completed": true,
      "icon": 1,
    }
  }
  text="App is submitted."
/>
`;

exports[`NavBlockedInProgressStep matches snapshot 1`] = `
<ConnectFunction
  buttonColor="default"
  stepClass="stepBlockedMsg"
  stepProps={
    Object {
      "StepIconComponent": [Function],
      "active": true,
      "classes": Object {
        "root": "css-f2qeki",
      },
    }
  }
  text="You have to add guarantor."
/>
`;

exports[`NavBlockedStep NavBlockedStepInProgress matches snapshot 1`] = `
<ForwardRef(WithStyles)
  active={true}
>
  <ForwardRef(WithStyles)
    completed={true}
  >
    <span
      className="class"
    >
      We are waiting for xyz
       Please call us at
       
      <a
        href="tel:123-456-7891"
      >
        123‑456‑7891
      </a>
       
      so we can discuss some other options.
    </span>
  </ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    classes={
      Object {
        "root": "css-1lf61q0",
      }
    }
    disabled={false}
    id="viewProgressButton"
    onClick={[Function]}
    variant="outlined"
  >
    View Progress
  </ForwardRef(WithStyles)>
</ForwardRef(WithStyles)>
`;
